<resources>
    <string name="app_name">Vision</string>
    <string name="title_search">Search</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_all_report">All Report</string>
    <string name="title_add_report">Add Report</string>
    <string name="title_my_report">My Report</string>
    <string name="title_profile">Profile</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_pending">Pending</string>
    <string name="title_finish">Finish</string>
    <string name="title_reject">Reject</string>
    <string name="upload">Upload</string>
    <string name="road_type">Road Type</string>
    <string name="location">Location</string>
    <string name="note">Note</string>
    <string name="required_note">Required Note</string>
    <string name="select_image">Select Image</string>
    <string name="image_valid">Image Valid</string>
    <string name="search_address">Looking for address ?</string>
    <string name="sample_address">Jl Dewi Sartika 148,Cawang</string>
    <string name="sample_long_address">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</string>
    <string name="sample_date">2015/05/15 11:10:23</string>

    <string-array name="road_type_list">
        <item>Asphalt</item>
    </string-array>

    <string name="title_activity_pick_location">Map</string>
    <string name="address">Address</string>
    <string name="navigate_maps">Navigate Maps</string>
    <string name="required">Required</string>
    <string name="required_location">Required Location</string>
    <string name="report_uploaded">Report Uploaded</string>
    <string name="report_failed_to_upload">Report Failed to Upload</string>
    <string name="reporting">Reporting</string>
    <string name="validating">Validating</string>
    <string name="image_invalid">Image Invalid</string>
    <string name="username">Username</string>
    <string name="default_count">0</string>
    <string name="upload_by">Upload By</string>
    <string name="time">Time</string>
    <string name="logout">Logout</string>
    <string name="maps">Maps</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="title_activity_detail_maps">Map</string>
    <string name="required_match">Password doesn\'t match</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="login_incorrect">Username or Password Incorrect</string>
    <string name="login_failed">Login Failed</string>
    <string name="user_not_found">Username Not Found</string>
    <string name="splash">Splash Screen</string>
    <string name="detail_report">Detail Report</string>
    <string name="auth">Authentication</string>
    <string name="username_exist">Username exist !</string>
    <string name="register_failed">Register Failed</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="title_monitor">Monitor</string>
    <string name="report_status">Report Status</string>
    <string name="register_success">Register Success</string>
    <string name="password_confirm_same">Password and Confirm Password Must be same</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="best_accuracy">Best Accuracy</string>
    <string name="my_location">My Location</string>
    <string name="search_location_failed">Cannot find location with your address</string>
    <string name="enable_location">Please enable your location</string>
    <string name="copyright_by_gen_z">Copyright by Gen-Z</string>
    <string name="copyright">© 2021 All Rights Reserved Terms of Use and Privacy Policy by Gen-Z</string>
    <string name="no_data_available">No Data Available</string>
    <string name="title_activity_maps">Map</string>
    <string name="cant_detect">Can\'t Detect Pothole From Image</string>
    <string name="enable_connection">Please enable your Connection</string>
    <string name="connect_internet">Please connect to internet</string>
    <string name="ok">OK</string>
    <string name="connection_required">Connection Required !</string>
    <string name="please_wait">Please Wait</string>
    <string name="failed_get_location">Failed to get location</string>
    <string name="failed_get_your_location">Failed to get your location</string>
    <string name="internet_required">Internet Required !</string>
    <string name="location_required">Location Required !</string>
    <string name="please_pick_image">Please pick an image !</string>
    <string name="sample_distance">2 Km from User</string>
    <string name="cancel">Cancel</string>
    <string name="ensure_good_connection">Ensure you have good internet connection</string>
    <string name="please_onoff_location">Please turn your location off and on again</string>
    <string name="ensure_upload_report">Are you sure to report this ?</string>
    <string name="sure">Sure</string>
    <string name="distance">Distance</string>
    <string name="yes">Yes</string>
    <string name="confirmation">Confirmation</string>
    <string name="want_to_send_report">Do you want to send this report?</string>
</resources>