<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_700">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/upload"
        android:elevation="8dp"
        app:backgroundTint="@color/white"
        app:srcCompat="@drawable/ic_baseline_send_24" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/clAddReportValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/road_type"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spnRoadType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/all_corner_ten_radius_white"
                android:entries="@array/road_type_list"
                android:padding="10dp"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/all_corner_ten_radius_white"
                android:backgroundTint="@color/white"
                android:editable="false"
                android:ellipsize="end"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="top"
                android:hint="@string/required_location"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="3"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@color/label"
                android:textColorHint="@color/label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/note"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/all_corner_ten_radius_white"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="top"
                android:hint="@string/required_note"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@color/label"
                android:textColorHint="@color/label" />

            <TextView
                android:id="@+id/tvTitleAccuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/best_accuracy"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvAccuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/all_corner_ten_radius_white"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="top"
                android:hint="@string/prediction_result"
                android:maxLines="2"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@color/label"
                android:textColorHint="@color/label"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnPickImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/color_500"
                android:elevation="8dp"
                android:fontFamily="@font/quicksand_bold"
                android:padding="15dp"
                android:text="@string/select_image"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imgCaptured"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_valid"
                android:maxHeight="200dp"
                android:paddingHorizontal="20dp"
                android:scaleType="fitCenter"
                android:visibility="visible"
                tools:src="@color/teal_700" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>