<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llItemReport"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:background="@color/color_700">

    <TextView
        android:padding="20dp"
        android:id="@+id/tvItemReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:maxLines="3"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sample_long_address" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvItemDistance"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            tools:text="@string/sample_distance" />

        <TextView
            android:id="@+id/tvItemDate"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            tools:text="@string/sample_date" />

    </LinearLayout>

    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>