<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_baseline_location_on_24"
        app:tint="@color/color_700" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/all_corner_ten_radius_white"
        android:drawableEnd="@drawable/ic_baseline_location_searching_24"
        android:drawablePadding="8dp"
        android:focusableInTouchMode="false"
        android:hint="@string/address"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:lines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnMyLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="16dp"
        android:drawableEnd="@drawable/ic_baseline_my_location_24"
        android:elevation="8dp"
        android:text="@string/my_location"
        app:backgroundTint="@color/color_700"
        app:rippleColor="@color/color_200"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/navigate_maps"
        android:src="@drawable/ic_baseline_done_24"
        app:backgroundTint="@color/teal_700"
        app:rippleColor="@color/color_700"
        app:tint="@color/white" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/clLocationValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp" />

</FrameLayout>